<resources>
    <string name="app_name">ShareMovies</string>
    <string name="addButton">Add</string>
    <string name="searchHint">search movie here</string>
    <string name="AddUserHint">Email</string>
    <string name="log_in">Log In</string>
    <string name="if_you_are_not_yet_registered_dont_worry_you_can_just_do_that_also">If you are not yet registered dont worry, you can just do that also!</string>
    <string name="welcome_to_sharemovies">Welcome to ShareMovies!</string>
    <string name="please_log_into_your_account_to_see_your_shared_movielist_below">Please log into your account to see your shared movielist below!</string>
    <string name="log_in_register">Log in/register</string>
    <string name="share">Share</string>
    <string name="imdb" translatable="false">IMDB:</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="movie_name">Movie name</string>
    <string name="xx" translatable="false">XX</string>
    <string name="your_rating">Your rating:</string>
    <string name="genre">Genre:</string>
    <string name="description">Description</string>
    <string name="romantic" translatable="false">Romantic</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="email">Email</string>
    <string name="BtnLogOut">Sign out</string>
    <string name="noteHint">Write your comments here</string>
    <string name="please_enter_a_movie">please enter a movie</string>
    <string name="signing_out">signing out...</string>
    <string name="returning">returning...</string>
    <string name="deleted_from_list">deleted from list</string>
    <string name="invalid_search_try_again">Invalid search. Try again!</string>
    <string name="button_addUser">Add friend</string>
    <string name="editText_group">Group ID</string>
    <string name="button_groupID">Show movie list</string>
    <string name="editText_newGroup">New group name</string>
    <string name="button_newGroup">Add new group</string>
    <string name="enter_new_group">Please add a group</string>
    <string name="currentGroupID">Current group:</string>
    <string name="added_to_list">added to list</string>
</resources>
